initial project setup

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 node_modules
 dist
-chrome_profile
-SCRAPING-MASTERCLASS.md
-bezier.ts
-README.md
 docs
-chrome-profile
+profiles
+playwright-report
