--- a/package.json
+++ b/package.json
@@ -7,10 +7,7 @@
     "test": "jest",
     "start": "tsc && node dist/scraper.js",
     "dev": "tsc && node dist/scraper.js",
-    "build": "tsc",
-    "stress:amazon": "tsc && node dist/concurrent-stress-test.js",
-    "stress:walmart": "tsc && node dist/stress-test-walmart.js",
-    "generate:data": "tsc && node dist/generate-amazon-50.js"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -19,12 +16,10 @@
     "@types/node": "^25.0.6",
     "anticaptcha": "^2.2.0",
     "csv-writer": "^1.6.0",
-    "ghost-cursor": "^1.4.2",
     "p-limit": "^3.1.0",
     "playwright": "^1.57.0",
     "playwright-extra": "^4.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2",
-    "user-agents": "^1.1.669"
+    "puppeteer-extra-plugin-stealth": "^2.11.2"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
